VRL: Fixed a bug in JobList where wrong job ID was used for cancel/resubmit. Also fixed a visual glitch in IE due to line wrapping in radio groups

--- a/src/main/webapp/css/virtualrocklab.css
+++ b/src/main/webapp/css/virtualrocklab.css
@@ -133,6 +133,11 @@ img {
     font-size:11px;
 }
 
+.x-form-check-group .x-form-check-wrap, 
+.x-form-radio-group .x-form-radio-wrap {
+    white-space: nowrap;
+}
+
 .jobdesc-title {
     font-weight: bold;
     font-size: medium;
